--- a/src/Components/Sidebar/Friends/Friends.module.css
+++ b/src/Components/Sidebar/Friends/Friends.module.css
@@ -1,16 +1,17 @@
 .item{
     color: honeydew;
     padding: 40px;
+    
 }
-.friendsItem a{
+/* .friendsItem {
     display: flex;
-}
+    justify-content: space-between;
+} */
 .photo img{
     width: 40px;
     height: 40px;
     border-radius: 30px;
+    
 }
-a {
-    display:inline-block;
-}
+
 
